--- a/_posts/2016-03-10-xp-model.md
+++ b/_posts/2016-03-10-xp-model.md
@@ -5,7 +5,7 @@ subject: Software Engineering
 
 # Экстремальное программирование
 
-_Экстремальное программирование_ (e**X**treme **P**rogramming) является одной из наиболее ивестных гибких метологий. Свое название методология получила в связи с попыткой доведения до экстремума принципов гибкой разработки ПО. В основе методологии XP - командная работа и эффективное взаимодействие между заказчиком и исполнителем в течение всего проекта. XP ориентировано на группы разработчиков **малого и среднего размера**, создающие ПО в условиях **неопределенных или быстро меняющихся требований** на протяжении **всего** цикла разработки, состоящих из **очень коротких** итераций.
+«_Экстремальное программирование_ (e**X**treme **P**rogramming) является одной из наиболее ивестных гибких метологий. Свое название методология получила в связи с попыткой доведения до экстремума принципов гибкой разработки ПО. В основе методологии XP - командная работа и эффективное взаимодействие между заказчиком и исполнителем в течение всего проекта. XP ориентировано на группы разработчиков **малого и среднего размера**, создающие ПО в условиях **неопределенных или быстро меняющихся требований** на протяжении **всего** цикла разработки, состоящих из **очень коротких** итераций.
 
 `Базис XP состовляют перечисленные ниже двенадцать методик:`
 
@@ -31,3 +31,4 @@ _Экстремальное программирование_ (e**X**treme **P**
 - Недостаточное внимание проектной документации.
 - Неприменимость XP, при отсутствии постоянного взаимодействия.
 - Необходимость высокого уровня самоконтроля и дисциплины. 
+»
